@@ -1,3 +1,6 @@
+2009-06-26: 12:00 Ali aliov@xfce.org
+	* Change the style of the brightness popup indicator.
+
 2009-06-21: 14:00 Ali aliov@xfce.org
 	* Make the generic common pointers static in the *_new functions.
 	* src/xfpm-xfconf.c free specs list after usage.
